Bug 783338 - Correct widget height on VS2012 (subsystem >= 6). r=jimm